# reasoner-validator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh
reasoner_validator/: __init__.py  reasoner_validator
tests/: test_semver.py  test_validate.py
