[tool.poetry]
name = "reasoner-validator"
version = "2.1.0"
description = "Validation tools for Reasoner API"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "3.2.0"
PyYAML = "5.4"
requests = "2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylama = "^8.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
